[package]
name = "passg"
version = "1.0.0"
authors = ["Florian Büstgens <florian.buestgens@efficient-dev.com>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
rand = "0.8.5"